--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" type="text" href="./style.css" />
+    <title>Portfolio - Bee Kay</title>
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">About Me</a></li>
+          <li><a href="#">Contact Me</a></li>
+          <li><a href="#">My Projects</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main></main>
+  </body>
 </html>
