added images and classes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Portfolio - Bee Kay</title>
   </head>
 
   <body>
+    <div class="hero">
     <header>
       <nav>
         <ul>
@@ -19,6 +20,24 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <div>
+        <h1 class="aboutme">aboutme</h1>
+        <div class="myimage"></div>
+        <img src="./assets2/images/me.JPG" alt="picture of me by pier" />
+        <div class="aboutmetext">so my name is</div>
+      </div>
+
+      <div class="cardcontainer">
+        <div card="card">
+          <img
+            src="./assets2/images/hwimage2.png"
+            alt="horiseon services page"
+          />
+          <div>Refactor of HTML and CSS</div>
+        </div>
+        
+      </div>
+    </div>
   </body>
 </html>
