added classes to the header and main section, as well as website text

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./assets2/css/style.css" />
+
+    <title>Project - Badra Khatoon</title>
   </head>
   <body>
     <div class="container">
-      <header>
-        <h1></h1>
-
-        <!--Header and navigation links in same line-->
-        <nav>
-          <ul>
+         <!--Header and navigation links in same line-->
+      <header class="header">
+        <h1>Badra Khatoon</h1>
+        <nav class="nav">
+          <ul class="nav-container">
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
@@ -22,20 +23,20 @@
       </header>
 
       <!--Main section-->
-      <main>
-        <section>
-          <h3>aboutme</h3>
-          <img src="" alt="" />
+      <main class="content">
+        <section class="aboutme">
+          <h3 id="aboutme" class="aside">aboutme</h3>
+          <img class="myimage" src="" alt="" />
 
           <div>
-            <h2>Hiya!</h2>
-            <h2>I'm Badra Khatoon</h2>
-            <p>blurb</p>
+            <h2 class="Hiya">Hiya!</h2>
+            <h2 class="beekay">I'm Badra Khatoon</h2>
+            <p class="paboutme">"Im a budding full stack developer, contact me to know more!"</p>
           </div>
 
           <div>
-            <h2>contact me</h2>
-            <h2>email add etc</h2>
+            <h2 id="contactme" class="aside">contact me</h2>
+            <h2 class="contactme">contact me: beekayuni@gmail.com</h2>
           </div>
         </section>
 
