added corresponding css classes for  header, navigation bar, about me and contact me

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Project - Badra Khatoon</title>
   </head>
   <body>
-    <div class="container">
-         <!--Header and navigation links in same line-->
+    <div>  <!--class="container" check this
+         Header and navigation links in same line-->
       <header class="header">
         <h1>Badra Khatoon</h1>
         <nav class="nav">
