added css styles to header and  navbar

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1>Badra Khatoon</h1>
         <nav class="nav">
           <ul class="nav-container">
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="#aboutme"></a>about me</li>
+            <li><a href="#contactme"></a>contact me</li>
+            <li><a href="#myprojects"></a>my projects</li>
           </ul>
         </nav>
       </header>
