--- a/index.html
+++ b/index.html
@@ -14,31 +14,35 @@
       <header class="header">
         <h1>Badra Khatoon</h1>
         <nav class="nav">
-          <ul class="nav-container">
-            <li><a href="#aboutme"></a>about me</li>
-            <li><a href="#contactme"></a>contact me</li>
-            <li><a href="#myprojects"></a>my projects</li>
+          <ul class="navcontainer">
+            <li><a href="#aboutme">about me</a></li>
+            <li><a href="#contactme">contact me</a></li>
+            <li><a href="#myprojects">my projects</a></li>
           </ul>
         </nav>
       </header>
 
+
       <!--Main section-->
       <main class="content">
         <section class="aboutme">
-          <h3 id="aboutme" class="aside">aboutme</h3>
-          <img class="myimage" src="" alt="" />
+          <h2 id="aboutme" class="aside">aboutme</h2>
+          <img class="myimage" src="./assets2/images/me.JPG"
+          alt="picture of me by the docks"/>
+        
 
           <div>
-            <h2 class="Hiya">Hiya!</h2>
+            <h2 class="hiya">Hiya!</h2>
             <h2 class="beekay">I'm Badra Khatoon</h2>
             <p class="paboutme">"Im a budding full stack developer, contact me to know more!"</p>
           </div>
+        </section>
 
           <div>
-            <h2 id="contactme" class="aside">contact me</h2>
+            <h3 id="contactme" class="aside">contact me</h3>
             <h2 class="contactme">contact me: beekayuni@gmail.com</h2>
           </div>
-        </section>
+        
 
 
       <div >
