added link to horiseon image

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           />
 
           <div>
-            <h2 class="hiya">Hiya!</h2>
-            <h2 class="beekay">I'm Badra Khatoon</h2>
+            <h2 class="hiya">"Hiya!"</h2>
+            <h2 class="beekay">"I'm Badra Khatoon"</h2>
             <p class="paboutme">
               "Im a budding full stack developer, contact me to know more!"
             </p>
@@ -54,14 +54,15 @@
     
    
        <div>
-        <h2 class="projects-title">My Projects</h2>
+        <h2 id="myprojects" class="projects-title">My Projects</h2>
         <!-- Projects flex container -->
         <div class="projects-container">
           <!-- Project Card 1 -->
           <div class="card">
             <!-- Card image -->
             <div class="card-image-container">
-              <img src="./assets2/images/hwimage2.png" />
+              <a href="https://bkay1.github.io/refactor-of-horiseon-website">
+              <img src="./assets2/images/hwimage2.png"/></a>
             </div>
             <!-- Project details -->
             <div class="card-info-container">
@@ -79,7 +80,7 @@
             <!-- Project details -->
             <div class="card-info-container">
               COMING SOON
-              <p> -Watch this space!!</p> 
+              <p> Watch this space!!</p> 
             </div>
           </div>
 
@@ -105,7 +106,7 @@
             <!-- Project details -->
             <div class="card-info-container">
               COMING SOON
-              <p> -Watch this space!!</p> 
+              <p> Watch this space!!</p> 
             </div>
           </div>
         </div>
