added alt text to images

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <!-- Contact Me -->
         <div>
           <h2 id="contactme" class="aside">contact me</h2>
-          <h2 class="contactme">contact me: beekayuni@gmail.com</h2>
+          <h2 class="contactme">contact me: beekayuni@gmail.com</a></h2>
         </div>
 
         
@@ -62,7 +62,7 @@
             <!-- Card image -->
             <div class="card-image-container">
               <a href="https://bkay1.github.io/refactor-of-horiseon-website">
-              <img src="./assets2/images/hwimage2.png"/></a>
+              <img src="./assets2/images/hwimage2.png"/ alt="Horiseon Services Page"></a>
             </div>
             <!-- Project details -->
             <div class="card-info-container">
@@ -75,7 +75,7 @@
           <div class="card">
             <!-- Card image -->
             <div class="card-image-container">
-              <img src="./assets2/images/keyboard.jpg" />
+              <img src="./assets2/images/keyboard.jpg" alt="white keyboard on white background"/>
             </div>
             <!-- Project details -->
             <div class="card-info-container">
@@ -88,7 +88,7 @@
           <div class="card">
             <!-- Card image -->
             <div class="card-image-container">
-              <img src="./assets2/images/keyboard.jpg"  />
+              <img src="./assets2/images/keyboard.jpg" alt="white keyboard on white background"/>
             </div>
             <!-- Project details -->
             <div class="card-info-container">
@@ -101,7 +101,7 @@
            <div class="card">
             <!-- Card image -->
             <div class="card-image-container">
-              <img src="./assets2/images/keyboard.jpg" />
+              <img src="./assets2/images/keyboard.jpg" alt="white keyboard on white background"/>
             </div>
             <!-- Project details -->
             <div class="card-info-container">
