changed sizing for pseudoelement

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2 class="hiya">"Hiya!"</h2>
             <h2 class="beekay">"I'm Badra Khatoon"</h2>
             <p class="paboutme">
-              "Im a budding full stack developer, contact me to know more!"
+              "Currently a carer, Im a budding full stack developer, contact me to know more!"
             </p>
           </div>
         </section>
