continued working on css sizing as media queries not working properly

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!--Main section-->
       <main class="content">
         <section class="aboutme">
-          <h2 id="aboutme" class="aside">about me</h2>
+          <h2 id="aboutme" class="side-content">about me</h2>
           <img
             class="myimage"
             src="./assets2/images/me.JPG"
@@ -37,15 +37,15 @@
             <h2 class="hiya">"Hiya!"</h2>
             <h2 class="beekay">"I'm Badra Khatoon"</h2>
             <p class="paboutme">
-              "Currently a carer, Im a budding full stack developer, contact me to know more!"
+              "Currently a carer, I'm a budding full stack developer, contact me to know more!"
             </p>
           </div>
         </section>
 
          <!-- Contact Me -->
         <div>
-          <h2 id="contactme" class="aside">contact me</h2>
-          <h2 class="contactme">contact me: beekayuni@gmail.com</a></h2>
+          <h2 id="contactme" class="side-content">contact me</h2>
+          <h2 class="contactme">contact me: beekayuni@gmail.com  <a href="mailto:beekayuni@gmail.com"><img src="./assets2/images/email-48.png" alt="pink email envelope" style="width: 32px;px;height: 25px;"></a></h2>
         </div>
 
         
@@ -97,7 +97,8 @@
             </div>
           </div>
 
-           <!-- Project Card 2 -->
+          
+           <!-- Project Card 4 -->
            <div class="card">
             <!-- Card image -->
             <div class="card-image-container">
